--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": "^14.19.1",
     "swiper": "^6.8.4",
     "vue": "^3.2.31",
+    "vue-awesome-swiper": "^5.0.0",
     "vue-router": "^4.0.13",
     "vuetify": "^2.6.4"
   },
@@ -20,6 +21,7 @@
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "@vue/compiler-sfc": "^3.0.0",
+    "eslint": "^8.12.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "~2.4.7"
