--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "@vue/compiler-sfc": "^3.0.0",
+    "axios": "^0.18.0",
     "eslint": "^8.12.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-axios": "~0.0.4",
     "vue-cli-plugin-vuetify": "~2.4.7"
   },
   "browserslist": [
