--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/js": "^6.5.95",
     "core-js": "^3.6.5",
+    "json-server": "^0.17.0",
     "node": "^14.19.1",
     "swiper": "^6.8.4",
     "vue": "^3.2.31",
