--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-awesome-swiper": "^5.0.0",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.0.13",
+    "vue-star-rating": "^2.1.0",
     "vuetify": "^2.6.4"
   },
   "devDependencies": {
