--- a/package.json
+++ b/package.json
@@ -13,15 +13,12 @@
     "core-js": "^3.6.5",
     "json-server": "^0.17.0",
     "node": "^14.19.1",
-    "primeicons": "^5.0.0",
     "primevue": "^3.13.1",
     "swiper": "^6.8.4",
     "vue": "^3.2.31",
     "vue-awesome-swiper": "^5.0.0",
-    "vue-axios": "^3.4.1",
     "vue-router": "^4.0.13",
-    "vue-star-rating": "^2.1.0",
-    "vuetify": "^2.6.4"
+    "vue-star-rating": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
