--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/js": "^6.5.95",
+    "aos": "^2.3.4",
     "core-js": "^3.6.5",
     "firebase": "^9.15.0",
     "json-server": "^0.17.0",
@@ -28,7 +29,6 @@
     "@vue/cli-plugin-router": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "@vue/compiler-sfc": "^3.0.0",
-    "axios": "^0.18.1",
     "eslint": "^8.17.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
