--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.15.0",
     "json-server": "^0.17.0",
     "node": "^14.19.1",
+    "primeicons": "^7.0.0",
     "primevue": "^3.13.1",
     "swiper": "^6.8.4",
     "vue": "^3.2.31",
